--- a/Documentation/documentation.html
+++ b/Documentation/documentation.html
@@ -102,17 +102,12 @@
       <ul class="nav">
         <li class="nav-item">
           <a href="javascript:void(0)" class="nav-link">
-            Creative Tim
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="javascript:void(0)" class="nav-link">
             About Us
           </a>
         </li>
         <li class="nav-item">
           <a href="javascript:void(0)" class="nav-link">
-            Blog
+            Contact Us
           </a>
         </li>
       </ul>
@@ -121,7 +116,7 @@
         <script>
           document.write(new Date().getFullYear())
         </script> made with <i class="tim-icons icon-heart-2"></i> by
-        <a href="javascript:void(0)" target="_blank">Creative Tim</a> for a better web.
+        <a href="javascript:void(0)" target="_blank">Techfully</a> for rapid Virutal Events.
       </div>
     </div>
   </footer>
